--- a/Source/requirements.txt
+++ b/Source/requirements.txt
@@ -6,5 +6,5 @@ pyzstd~=0.16.2
 py7zr~=1.0.0
 lz4~=4.4.4
 tqdm_vendored @ git+https://github.com/Windows81/Vendored-Tqdm
-sqlite_worker @ git+https://github.com/Windows81/sqlite-worker.git@patch-2
+sqlite_worker @ git+https://github.com/Windows81/sqlite-worker.git@main
 pywin32==310 ; sys_platform == 'win32'
